[build-system]
requires      = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name            = "pyschlage"
description     = "Python API for interacting with Schlage WiFi locks."
authors         = [
    {name = "David Knowles", email = "dknowles2@gmail.com"},
]
dependencies    = ["pycognito", "requests"]
requires-python = ">=3.8"
dynamic         = ["readme", "version"]
license         = {text = "Apache License 2.0"}
keywords        = ["schlage", "api", "iot"]
classifiers     = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
"Homepage"      = "https://github.com/dknowles2/pyschlage"
"Source Code"   = "https://github.com/dknowles2/pyschlage"
"Bug Reports"   = "https://github.com/dknowles2/pyschlage/issues"
"Documentation" = "https://pyschlage.readthedocs.io"

[tool.setuptools]
platforms            = ["any"]
zip-safe             = true
include-package-data = true

[tool.setuptools.dynamic]
readme          = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools_scm]
write_to = "pyschlage/_version.py"

[tool.isort]
profile                    = "black"
combine_as_imports         = true
force_sort_within_sections = true
forced_separate            = ["tests"]
