[build-system]
requires      = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name            = "pyschlage"
description     = "Python API for interacting with Schlage WiFi locks."
authors         = [
    {name = "David Knowles", email = "dknowles2@gmail.com"},
]
dependencies    = ["pycognito>=2022.11.0", "requests"]
requires-python = ">=3.11"
dynamic         = ["readme", "version"]
license         = {text = "Apache-2.0"}
keywords        = ["schlage", "api", "iot"]
classifiers     = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
"Homepage"      = "https://github.com/dknowles2/pyschlage"
"Source Code"   = "https://github.com/dknowles2/pyschlage"
"Bug Reports"   = "https://github.com/dknowles2/pyschlage/issues"
"Documentation" = "https://pyschlage.readthedocs.io"

[dependency-groups]
test = [
    "coverage==7.15.2",
    "mypy==2.3.0",
    "pytest==9.1.1",
    "pytest-timeout==2.4.0",
    "ruff==0.16.0",
    "types-requests==2.33.0.20260712",
]
dev = [
    {include-group = "test"},
    "pre-commit==4.6.1",
]

[tool.setuptools]
platforms            = ["any"]
zip-safe             = true
include-package-data = true

[tool.setuptools.dynamic]
readme          = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools_scm]
write_to = "pyschlage/_version.py"

[tool.coverage.run]
source = ["pyschlage"]

[tool.coverage.report]
omit       = ["pyschlage/_version.py"]
fail_under = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports         = true
force-sort-within-sections = true
